# arka

./: Cargo.toml  README.md
.github/: SECURITY.md
examples/: agent_account.rs  agent_buys_inference.rs  agent_infernet_pricing.rs  agent_pay_across_chains.rs  basic_agent.rs  multi_chain.rs  multi_chain_solana.rs  switchboard_x402_client.rs
src/: lib.rs
src/agent/: account.rs  mod.rs
src/chain/: connector.rs  mod.rs  solana.rs  solana_connector.rs
src/chains/: arbitrum.rs  mod.rs  solana.rs
src/compute/: infernet.rs  mod.rs
src/cr8/: mod.rs  tests.rs
src/dex/: router.rs  types.rs
src/mcp/: mod.rs
src/mpp/: mod.rs  types.rs
src/oracle/: mod.rs
src/pay/: mod.rs  x402.rs
src/wallet/: mod.rs  solana.rs
tests/: mcp_stdio.rs  solana_integration.rs  solana_test.rs
